fix: Implemented part of Koin dependecy injection and fixed some issues with the repository interfaces

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
 exposed_version=0.61.0
 h2_version=2.3.232
-kotlin_version=2.2.20
+kotlin_version=2.2.21
 ktor_version=3.3.0
 logback_version=1.4.14
+koin_version=4.1.1
